--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,26 +1,177 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Clasificador de Insectos</title>
+    <title>Clasificador de Pistaches con RFE (Recursive Feature Elimination/Eliminación Recursiva de Características)</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        th, td {
+            text-align: left;
+        }
+    </style>
+</head>
+<body>
+    <div class="container-fluid">
+        <h1 class="mt-4 mb-4">Clasificador de Pistaches con RFE</h1>
+        
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <h2>Características y Rankings</h2>
+                <table class="table table-dark table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Feature</th>
+                            <th scope="col">Ranking</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>MINOR_AXIS</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>SOLIDITY</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>PERIMETER</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>ROUNDNESS</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>ASPECT_RATIO</td>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <td>EQDIASQ</td>
+                            <td>6</td>
+                        </tr>
+                        <tr>
+                            <td>SHAPEFACTOR_2</td>
+                            <td>7</td>
+                        </tr>
+                        <tr>
+                            <td>SHAPEFACTOR_3</td>
+                            <td>8</td>
+                        </tr>
+                        <tr>
+                            <td>ECCENTRICITY</td>
+                            <td>9</td>
+                        </tr>
+                        <tr>
+                            <td>AREA</td>
+                            <td>10</td>
+                        </tr>
+                        <tr>
+                            <td>EXTENT</td>
+                            <td>11</td>
+                        </tr>
+                        <tr>
+                            <td>SHAPEFACTOR_1</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td>COMPACTNESS</td>
+                            <td>13</td>
+                        </tr>
+                        <tr>
+                            <td>CONVEX_AREA</td>
+                            <td>14</td>
+                        </tr>
+                        <tr>
+                            <td>SHAPEFACTOR_4</td>
+                            <td>15</td>
+                        </tr>
+                        <tr>
+                            <td>MAJOR_AXIS</td>
+                            <td>16</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+            <div class="col-md-6 mb-4">
+                <h2>Muestras de Pistaches</h2>
+                <table class="table table-dark table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">MINOR_AXIS</th>
+                            <th scope="col">SOLIDITY</th>
+                            <th scope="col">SHAPEFACTOR_1</th>
+                            <th scope="col">Class</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>217.7261</td>
+                            <td>0.9424</td>
+                            <td>0.0061</td>
+                            <td>Kirmizi_Pistachio</td>
+                        </tr>
+                        <tr>
+                            <td>251.9546</td>
+                            <td>0.9641</td>
+                            <td>0.0052</td>
+                            <td>Siit_Pistachio</td>
+                        </tr>
+                        <tr>
+                            <td>209.1255</td>
+                            <td>0.9465</td>
+                            <td>0.0063</td>
+                            <td>Kirmizi_Pistachio</td>
+                        </tr>
+                        <tr>
+                            <td>221.2136</td>
+                            <td>0.9437</td>
+                            <td>0.0059</td>
+                            <td>Kirmizi_Pistachio</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <h2>Formulario de Clasificación</h2>
+        <form id="formulario" onsubmit="clasificarPistache(event)">
+            <div class="form-group">
+                <label for="MINOR_AXIS">Ingresa el eje menor del pistache:</label>
+                <input type="text" class="form-control" id="MINOR_AXIS" name="MINOR_AXIS">
+            </div>
+            <div class="form-group">
+                <label for="SOLIDITY">Ingresa la solidez del pistache:</label>
+                <input type="text" class="form-control" id="SOLIDITY" name="SOLIDITY">
+            </div>
+            <button type="submit" class="btn btn-primary">Obtener Resultado</button>
+        </form>
+        <p id="resultado" class="mt-3"></p>
+
+        <button onclick="window.location.href='https://www.ejemplo.com/random_forest';" class="btn btn-success mt-3">Random Forest</button>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
     <script>
-        function clasificarInsecto(event) {
+        function clasificarPistache(event) {
             event.preventDefault();
-            const abdomen = document.getElementById('abdomen').value;
-            const antena = document.getElementById('antena').value;
+            const MINOR_AXIS = document.getElementById('MINOR_AXIS').value;
+            const SOLIDITY = document.getElementById('SOLIDITY').value;
 
             fetch('/predict', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
                 },
-                body: `abdomen=${abdomen}&antena=${antena}`,
+                body: `MINOR_AXIS=${MINOR_AXIS}&SOLIDITY=${SOLIDITY}`,
             })
             .then(response => response.json())
             .then(data => {
                 if (data.error) {
                     document.getElementById('resultado').innerText = 'Error: ' + data.error;
                 } else {
-                    document.getElementById('resultado').innerText = 'El insecto es una ' + data.categoria;
+                    document.getElementById('resultado').innerText = 'El tipo de pistache es ' + data.categoria;
                 }
             })
             .catch(error => {
@@ -29,16 +180,5 @@
             });
         }
     </script>
-</head>
-<body>
-    <h1>Clasificador de Insectos</h1>
-    <form id="formulario" onsubmit="clasificarInsecto(event)">
-        <label for="abdomen">Longitud del Abdomen:</label>
-        <input type="text" id="abdomen" name="abdomen"><br><br>
-        <label for="antena">Longitud de las Antenas:</label>
-        <input type="text" id="antena" name="antena"><br><br>
-        <input type="submit" value="Enviar">
-    </form>
-    <p id="resultado"></p>
 </body>
 </html>
